; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_get_root.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_get_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MTRC_ROOT = common dso_local global i32 0, align 4
@MTRC_ROOTMAP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ht_get_root(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @MTRC_ROOT, align 4
  %11 = call i8* @get_hash(i32 %9, i32 %10)
  store i8* %11, i8** %7, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @MTRC_ROOTMAP, align 4
  %14 = call i8* @get_hash(i32 %12, i32 %13)
  store i8* %14, i8** %8, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i8*, i8** %8, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %17, %2
  store i8* null, i8** %3, align 8
  br label %31

21:                                               ; preds = %17
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @get_ii32(i8* %22, i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  store i8* null, i8** %3, align 8
  br label %31

27:                                               ; preds = %21
  %28 = load i8*, i8** %8, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i8* @get_is32(i8* %28, i32 %29)
  store i8* %30, i8** %3, align 8
  br label %31

31:                                               ; preds = %27, %26, %20
  %32 = load i8*, i8** %3, align 8
  ret i8* %32
}

declare dso_local i8* @get_hash(i32, i32) #1

declare dso_local i32 @get_ii32(i8*, i32) #1

declare dso_local i8* @get_is32(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
